# xylia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _xylia.bash  _xylia.zsh  _zsh_xylia.sh  build.sh  index.md  summary.sh  xylia.vim
docs/: index.md  xydoc
docs/getting-started/: hello-world.md  installation.md
docs/stdlib/: array.md  index.md  io.md  map.md  math.md  random.md  strings.md  time.md  utility.md  vector.md
examples/: example_00.xyl  example_01.xyl  example_01_hello_world.xyl  example_02.xyl  example_02_functions.xyl  example_03.xyl  example_03_closures.xyl  example_04.xyl  example_04_collections.xyl  example_05.xyl  example_05_control_flow.xyl  example_06.xyl  example_06_classes.xyl  example_07_file_io.xyl
include/: builtins.h  chunk.h  cli.h  compiler.h  debug.h  docs.h  hash.h  memory.h  object.h  project_manager.h  random.h  repl.h  scanner.h  shell_integration.h  table.h  value.h  vm.h  xyl_ffi.h  xylia.h
lib/: array.xyl  c.xyl  collections.xyl  io.xyl  map.xyl  math.xyl  random.xyl  string.xyl  strings.xyl  test.xyl  time.xyl  utility.xyl  vector.xyl
lib/docs/: array.xyd  io.xyd  map.xyd  math.xyd  random.xyd
src/: builtins.c  builtins_array.c  builtins_casts.c  builtins_ffi.c  builtins_io.c  builtins_math.c  builtins_result.c  builtins_tests.c  builtins_time.c  builtins_utils.c  builtins_vectors.c  chunk.c  cli_docs.c  cli_repl.c  cli_run.c  cli_utils.c  compiler.c  debug.c  docs.c  main.c  memory.c  object.c  random.c  repl.c  scanner.c  table.c  value.c  vm.c  xyl_ffi.c
tests/: math.xyl  test.xyl  vectors.xyl
